# overmind

./: .gitignore  .overmind.toml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
knowledge/: sync.md
scripts/: install.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: config_command.rs  desync.rs  doctor.rs  init.rs  mod.rs  module.rs  pack.rs  source.rs  sync.rs  unlink.rs
src/config/: mod.rs
src/render/: mod.rs
src/source/: mod.rs
tests/: source_resolution.rs
