[package]
name = "ovmd"
version = "0.1.2"
edition = "2021"
description = "Overmind CLI for syncing modular AI agent rules."
license = "MIT"
repository = "https://github.com/beelol/overmind"

[[bin]]
name = "ovmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
ureq = { version = "2.10", features = ["tls"] }

[dev-dependencies]
tempfile = "3.10"
